fixed spacing issue in register page

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -582,9 +582,6 @@ video {
 .h-full {
   height: 100%;
 }
-.h-screen {
-  height: 100vh;
-}
 .h-4 {
   height: 1rem;
 }
